# remote_llms

./: .gitignore  LICENSE  README.md  llm-models-config.yml  pyproject.toml
remote_llms/: .env_example  clients.py  llm-models-config.yml  prompt_templates.py  remote_llm.py  remote_llms_config.py
