[project]
name = "remote-llms"
version = "0.1.0"
description = ""
authors = [
    {name = "Artem Revenko",email = "artem.revenko@graphwise.ai"}
]
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "pydantic-settings (>=2.9.1,<3.0.0)",
    "pyyaml (>=6.0.2,<7.0.0)",
    "boto3 (>=1.39.4,<2.0.0)"
]


[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
